--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
 		.di1 ul li{
 			display: inline-block;
 			width: 286px;height: 50px;
-			margin-bottom: 25px;margin-top: 25px;
+			margin-bottom: 25px;
+			margin-top: 25px;
+			margin-right: 11px;
 			text-align: center;
 			border-right: 1px solid #e0e0e0;
 		}
@@ -280,7 +282,7 @@
 				<li><a href="#">宁夏</a></li>
 				<li><a href="#">黑龙江</a></li>
 				<li style="margin-right:130px;"><a href="#">河北</a></li>
-				<li style="text-align: right;"><a href="#">更多</a></li>
+				<li style="text-align: right;font-size: 14px;"><a href="#">更多</a></li>
 			</ul>
 		</div>
 		<div class="tu">
@@ -350,7 +352,7 @@
 				<li style="background: url(img6/f1.png) no-repeat 33px;"><p>资质认证</p><span style="left: 24px">服务商100%实名认证</span></li>
 				<li style="background: url(img6/f2.png) no-repeat 33px;"><p>支付安全</p><span style="left: 26px">明码标价支付信息安全</span></li>
 				<li style="background: url(img6/f3.png) no-repeat 33px;"><p>保险赔付</p><span style="left: 14px">为您提供担保赔付</span></li>
-				<li style="border-right: none;background: url(img6/f4.png) no-repeat 33px;"><p>售后无忧</p><span style="left: 33px;">服务出问题经历全程跟进</span></li>
+				<li style="border-right: none;background: url(img6/f4.png) no-repeat 33px;margin-right: 0px;"><p>售后无忧</p><span style="left: 33px;">服务出问题经历全程跟进</span></li>
 			</ul>
 		</div>
 	</div>
